apps/templates/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
tls:
  - hosts:
    - digitor.dk
    secretName: quickstart-example-tls
  rules:
    - host: argo.digitor.dk
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argo-cd-argocd-server
              port:
                number: 443
